@@ -133,6 +133,9 @@ electromagnetic-penetrator-damage-bonus=Electromagnetic penetrator damage: __1__
 hextreme=Hextreme
 
 [controls]
+toggle-questbook=Toggle Questbook
+toggle-catalog=Toggle Catalog
+toggle-trade-overview=Toggle Trade Overview
 claim-hex-core=Claim Hex Core
 teleport-to-hex-core=Teleport to Hex Core
 
@@ -499,6 +502,9 @@ minimum-trade-quality=Minimum quality that this trade will try to use.
 maximum-trade-quality=Maximum quality that this trade will try to use.
 
 [hextorio-gui]
+questbook-button-tooltip=Open/close the questbook (__CONTROL__toggle-questbook__)
+catalog-button-tooltip=Open/close the catalog (__CONTROL__toggle-catalog__)
+trade-overview-button-tooltip=Open/close the trade overview (__CONTROL__toggle-trade-overview__)
 item-value=Item Value
 stack-value=Stack Value
 stack-value-total=Stack Value (Total)
